<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNotesActivity" >

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTitle" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="84dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:hint="@string/enter_title"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editDes"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" app:layout_constraintHorizontal_bias="0.503"
            android:hint="@string/enter_note" android:layout_marginEnd="8dp"/>
    <Button
            android:background="@drawable/bublue_color"
            android:text="@string/add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="6dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="100dp" app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="add"/>
</android.support.constraint.ConstraintLayout>