<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">
    <LinearLayout
            android:id="@+id/ll_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#ffffff"
            android:padding="50dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="20dp"
                android:text="@string/authorization"/>
        <EditText
                android:id="@+id/userNameField"
                android:hint="@string/user_name"
                android:textColor="#000000"
                android:textColorHint="#A9A9A9"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="20sp"/>
        <EditText
                android:id="@+id/passwordField"
                android:hint="@string/password"
                android:textColor="#000000"
                android:textColorHint="#A9A9A9"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="20sp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="25dp"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_signIn"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:background="#66CDAA"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content" android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>